exports[`Messages EmptyMessage should match the snapshot 1`] = `
<div
  className="handler--empty">
  empty
</div>
`;

exports[`Messages ErrorMessage should match the snapshot 1`] = `
<div
  className="handler--error">
  error
</div>
`;

exports[`Messages LoadingMessage should match the snapshot 1`] = `
<div
  className="handler--loading">
  loading...
</div>
`;
